syntax = "proto3";

package api;

option go_package = "generated/api";

service Task {
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {}
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse) {}
}

message GetTaskRequest {
  int32 task_id = 1;
}

message GetTaskResponse {
  int32 task_id = 1;
  string title = 2;
  bool done = 3;
}

message CreateTaskRequest {
  string title = 1;
}

message CreateTaskResponse {
  int32 task_id = 1;
}

message UpdateTaskRequest {
  int32 task_id = 1;
  string title = 2;
  bool done = 3;
}

message UpdateTaskResponse {}
